--- a/missfit/missfit/Base.lproj/Main.storyboard
+++ b/missfit/missfit/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -1340,7 +1339,8 @@
         <!--重置密码-->
         <scene sceneID="9cW-jP-tzY">
             <objects>
-                <viewController storyboardIdentifier="ResetPasscodeViewController" id="Zp5-Zb-ejg" customClass="ResetPasscodeViewController" customModule="missfit" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nCB-tp-a97" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="ForgotPasscodeViewController" id="Zp5-Zb-ejg" customClass="ForgotPasscodeViewController" customModule="missfit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rMd-mX-wAD"/>
                         <viewControllerLayoutGuide type="bottom" id="aNT-lR-kZN"/>
@@ -1358,7 +1358,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="verifyCodeButtonClicked:" destination="Zp5-Zb-ejg" eventType="touchUpInside" id="dqy-Rw-8AY"/>
+                                    <action selector="verifyCodeButtonClicked:" destination="Zp5-Zb-ejg" eventType="touchUpInside" id="a91-Zl-lZb"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="请设置您新的密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gnr-qO-9n2">
@@ -1386,7 +1386,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="submitButtonClicked:" destination="Zp5-Zb-ejg" eventType="touchUpInside" id="DyN-hb-fuO"/>
+                                    <action selector="submitButtonClicked:" destination="Zp5-Zb-ejg" eventType="touchUpInside" id="627-OO-Jam"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="请输入您的手机号码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KKP-XI-mAJ">
@@ -1427,21 +1427,20 @@
                     <navigationItem key="navigationItem" title="重置密码" id="xJW-uz-TKv">
                         <barButtonItem key="leftBarButtonItem" image="backBarBtnBg" id="ml4-Tq-B4K">
                             <connections>
-                                <action selector="backButtonClicked:" destination="Zp5-Zb-ejg" id="CDH-1g-Nx9"/>
+                                <action selector="backButtonClicked:" destination="Zp5-Zb-ejg" id="H4i-Ce-m32"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="passcodeTextField" destination="Gnr-qO-9n2" id="MCg-HA-7c9"/>
-                        <outlet property="phoneNumberTextField" destination="KKP-XI-mAJ" id="Uwq-E2-PAY"/>
-                        <outlet property="submitButton" destination="Xkp-NA-G52" id="fYo-g2-QgX"/>
-                        <outlet property="verifyCodeTextField" destination="fAo-xS-cQD" id="hxE-72-icq"/>
-                        <outlet property="verifycodeButton" destination="uK7-qZ-GNN" id="XaD-i8-Mdd"/>
+                        <outlet property="passcodeTextField" destination="Gnr-qO-9n2" id="T1g-Xk-lVt"/>
+                        <outlet property="phoneNumberTextField" destination="KKP-XI-mAJ" id="pZa-hG-eGg"/>
+                        <outlet property="submitButton" destination="Xkp-NA-G52" id="74M-Py-baT"/>
+                        <outlet property="verifyCodeTextField" destination="fAo-xS-cQD" id="O9A-Wj-MG8"/>
+                        <outlet property="verifycodeButton" destination="uK7-qZ-GNN" id="4SP-2z-5GL"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nCB-tp-a97" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1623" y="1729"/>
         </scene>
